# flutter_qjs

./: .gitignore  .gitmodules  .metadata  CHANGELOG.md  LICENSE  README-CN.md  README.md  pubspec.yaml
.github/workflows/: test.yml
android/: .gitignore  .project  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cxx/: CMakeLists.txt
android/src/main/jni/: CMakeLists.txt  java_js_wrapper.hpp  jni_helper.hpp  js_dart_promise.hpp  js_engine.hpp  native-lib.cpp
android/src/main/jni/quickjs/: quickjs.c  quickjspp.hpp
android/src/main/kotlin/soko/ekibun/flutter_qjs/: FlutterQjsPlugin.kt  JniBridge.kt  JsEngine.kt  MethodChannelWrapper.kt  ResultWrapper.kt
coverage/: index-sort-f.html  index-sort-l.html  index.html  lcov.info
coverage/src/: engine.dart.func-sort-c.html  engine.dart.func.html  engine.dart.gcov.html  ffi.dart.func-sort-c.html  ffi.dart.func.html  ffi.dart.gcov.html  index-sort-f.html  index-sort-l.html  index.html  isolate.dart.func-sort-c.html  isolate.dart.func.html  isolate.dart.gcov.html  object.dart.func-sort-c.html  object.dart.func.html  object.dart.gcov.html  wrapper.dart.func-sort-c.html  wrapper.dart.func.html  wrapper.dart.gcov.html
cxx/: ffi.cpp  ffi.h  js_dart_promise.hpp  js_encoding.hpp  js_engine.hpp  prebuild.sh  quickjs.cmake  quickjspp.hpp
cxx/libiconv/: CMakeLists.txt  config.h  iconv.hpp
cxx/libiconv/include/: iconv.h
cxx/libiconv/libcharset/: CMakeLists.txt
cxx/libiconv/libiconv/: CMakeLists.txt  iconv.c  libiconv.vcxproj  libiconv.vcxproj.filters
cxx/quickjs/: cutils.c  cutils.h  libregexp.c  quickjs.c  quickjs.h  quickjspp.hpp
example/: .metadata  README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/soko/ekibun/example/: MainActivity.kt
example/android/app/src/main/kotlin/soko/ekibun/flutter_qjs_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/js/: hello.js
example/lib/: highlight.dart  main.dart  test.dart
example/lib/code/: editor.dart  highlight.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  window_configuration.cpp
ios/: CMakeLists.txt  flutter_qjs.podspec  make.sh
ios/Classes/: FlutterQjsPlugin.h  FlutterQjsPlugin.m  SwiftFlutterQjsPlugin.swift
lib/: define.dart  ffi.dart  flutter_qjs.dart  flutter_qjs_web.dart  isolate.dart  wasm.dart  wrapper.dart
lib/src/: engine.dart  ffi.dart  isolate.dart  object.dart  wrapper.dart
linux/: CMakeLists.txt  dart_js_wrapper.hpp  flutter_qjs_plugin.cc
linux/include/flutter_qjs/: flutter_qjs_plugin.h
macos/: CMakeLists.txt  flutter_qjs.podspec  make.sh
macos/Classes/: FlutterQjsPlugin.swift
test/: CMakeLists.txt  flutter_qjs_test.dart  make.sh
test/lib/: CMakeLists.txt  ffi.cpp  make.cmd
web/: CMakeLists.txt  make.sh
windows/: CMakeLists.txt  dart_js_wrapper.hpp  flutter_qjs_plugin.cpp  js_dart_promise.hpp  js_engine.hpp
windows/include/flutter_qjs/: flutter_qjs_plugin.h
windows/quickjs/: quickjspp.hpp
